# isystem-folder

./: CMakeLists.txt  LICENSE  README.md
logs/: README.md
source/: main.cpp
source/helpers/: Enums.hpp  File.hpp  Folder.hpp
